# uzu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.out  center.tmx  central.tmx  demon_ruin.tmx  item.h  k  level0.json  map1.tmx  map2.tmx  meson.build  s.sh  t.c  test.c  test.tmx  test_hash.c  untitled.tmx
.clangd/index/: basic_test.c.2AD4A43DDCACD2B0.idx  common.c.E2D1BC76B22B5871.idx  common.h.06C50FF03E6EA8C4.idx  common.h.D4CFEDAEC97CE279.idx  components.h.891A1E2424D6D48E.idx  draw_system.c.C54A48040742A369.idx  draw_system.h.DDF769B51379E8AD.idx  ecs_pool_test.c.B9F14FC7BF0E3117.idx  engine.c.F97581B9F7F5EEFF.idx  engine.h.0337B8C8CFA5210B.idx  entity_pool.c.09165E57D0AEC14E.idx  entity_pool.h.7B06D4BB07CF4BE8.idx  movement_system.c.45CA39EF688C9AFD.idx  movement_system.h.7F944CD61C2D389C.idx  player_controller_system.c.8BD6C6906C54C7E2.idx  player_controller_system.h.C5422470AE09FC6B.idx  pool.c.2A3A996EBD151282.idx  pool.h.A8339B2240015F2B.idx  sprite-sheet.c.910F28F0CBEE9F29.idx  sprite-sheet.h.E44E62628FD299F1.idx  sprite.c.6F244968A9208ABF.idx  sprite.h.925164A117788B8D.idx  test.c.E8C5090549644746.idx  test.h.6ADB41FCB8CB6C63.idx  unowned_group.c.F4C33C90931FB1A8.idx  unowned_group.h.EB12BF966801A220.idx  (+3 more)
Debug/: makefile  sources.mk
asserts/: untitled.tsx  weapon.zip.txt
doc/: luabinding.md
include/: action.h  animations.h  behavior_tree.h  behaviour_tree.h  blackboard.h  btcondition.h  bttask.h  camera_shaker.h  components.h  constances.h  dungeon.h  entity_factory.h  entity_utils.h  game_event.h  game_scene.h  global.h  inventory.h  json_helper.h  lua_script.h  luabinding.h  main_menu.h  map.h  path_finder.h  resources.h  rfl.h  scene.h  session.h  sprite_renderer.h  struct_meta_data.h  types.h  ui.h  ui_boss_health_bar.h  ui_dialogue.h  ui_helper.h  ui_list.h  ui_msgbox.h  ui_msgbox_w_icon.h  ui_quality.h  ui_subtile.h
res/: test.lua  tree_example.xml  untitled.tsx
src/: CMakeLists.txt  action.c  animations.c  behavior_tree.c  behaviour_tree.c  behaviour_tree.h  blackboard.c  camera_shaker.c  common.h  components.c  components.h  constances.c  constances.h  dungeon.c  dungeon.h  entity_factory.c  entity_factory.h  entity_utils.c  game_event.c  game_scene.c  game_scene.h  gamescr.c  gamescr.h  generator.c  generator.h  global.c  graph.c  graph.h  inventory.c  inventory.h  item.c  item.h  json_helper.c  level_loader.c  lua_script.c  luabinding.c  main_menu.c  main_menu.h  map-loader.c  map-loader.h  (+38 more)
src/action/: express_emotion.c  talk.c  vanish.c  wait.c  walk.c
src/ai/: attack.c  attack.h  btt_find_player_location.c  btt_find_player_location.h  btt_find_random_location.c  btt_find_random_location.h  btt_fllow_path.h  btt_follow_path.c  btt_follow_path.h  btt_is_player_near_by.h  btt_move_to.c  btt_move_to.h  btt_wait.c  btt_wait.h  equip.c  equip.h  find_player_target.c  find_player_target.h  find_random_destination.c  find_random_destination.h  follow.c  follow.h  follow_attacker.c  follow_attacker.h  follow_player.c  follow_player.h  is_attacked.c  is_player_cross_spot.c  is_player_cross_spot.h  is_player_far_away.c  is_player_far_away.h  is_player_out_of_spot.c  is_player_out_of_spot.h  meson.build  move_to.c  move_to.h  set_dest_to_spot.c  set_dest_to_spot.h  wait.c  wait.h
src/behavior_node/: CMakeLists.txt  meson.build
src/behavior_node/condition/: has_attack_target.c  is_attacked.c
src/behavior_node/task/: attack.c  equip.c  follow.c  follow_attack_target.c  move_to.c  run_away_from_the_target.c  set_dest_to_spot.c  wait.c
src/behavior_tree/: CMakeLists.txt  attack_task.c  bt_attack_task.c  bt_component_based_condition.c  bt_composite_node.c  bt_decorator.c  bt_get_random_location_task.c  bt_inverter.c  bt_node.c  bt_repeater.c  bt_root.c  bt_runtime.c  bt_selector.c  bt_sequence.c  bt_tree.c  bt_tree_parser.c  bt_wait_task.c  bt_walk_directly_toward_task.c  component_based_condition.c  composite_node.c  decorator.c  execution_with_chance.c  get_initial_position_task.c  get_random_location_task.c  inverter.c  repeater.c  root.c  selector.c  sequence.c  wait_task.c  walk_directly_toward_task.c  walk_to.c
src/behavior_tree/task/: equip.c  wait.c
src/ecs/: CMakeLists.txt  common.h  ecs.c  ecs.h  entity_pool.c  entity_pool.h  meson.build  pool.c  pool.h  world.c  world.h
src/engine/: CMakeLists.txt  engine.c  engine.h  keyboard.c  keyboard.h  meson.build
src/game_event/: CMakeLists.txt  begining.c  brian_first_encounter.c  game_event.c  meson.build  rescue_brian.c
src/system/: CMakeLists.txt  action.c  action_execution_system.c  action_execution_system.h  ai.c  ai_system.c  ai_system.h  animator.c  animator_controller_system.c  animator_controller_system.h  animator_ctl_sys.c  animator_ctl_sys.h  animator_sys.c  animator_sys.h  animator_system.c  animator_system.h  block_input_system.c  boss.c  camera.c  camera_following_system.c  camera_following_system.h  camera_sys.c  camera_sys.h  casting.c  casting_sys.c  casting_sys.h  casting_system.c  character_animator.c  chest.c  chest_system.c  chest_system.h  collision.c  collision_filter.c  collision_filter.h  collision_manager.c  collision_mgr_sys.c  collision_mgr_sys.h  collision_sys.c  collision_sys.h  collision_system.c  (+122 more)
src/system/debug/: draw_destination.c  draw_hitbox.c  draw_hitbox.h  draw_path.c  draw_path.h  draw_position.c  draw_position.h  draw_target.c  draw_target.h
src/system/game_event/: begining.c  game_event.c  game_event.h  get_weapon.c  kill_monsters.c  luca.c  luca.h
src/system/weapon_skill/: charge.c  charge.h  shoot.c  swing.c  swing.h  thunder_storm.c  thunder_storm.h  thust.c  thust.h
src/toolbox/: CMakeLists.txt  aabb-tree.c  aabb-tree.h  array.c  array.h  behaviour_tree.h  common.h  hash_table.c  heap.c  heap.h  log.h  meson.build  pathfinding.h  ptrarray.c  ptrarray.h  queue.c  rect.c  rect.h  rtree.c  rtree.h  signal.c  signal.h  sprite-sheet.c  sprite-sheet.h  sprite.c  sprite.h  toolbox.h
src/ui/: health_bar.c  health_bar.h  meson.build  ui.h  window.c  window.h
test/: ecs_pool_test.c  rect_test.c
todo/: scripting-api.md
(+94 files in other folders)
