subdir('engine')
subdir('ecs')
subdir('toolbox')
subdir('system')
subdir('ai')
source_files = files(
  'dungeon.c', 
  'components.c',
  'resources.c', 
  'entity_factory.c',
  'map.c', 
  'inventory.c',
  'behaviour_tree.c', 
  'path_finder.c',
  'utils.c',
  'read_all.c',
  'game_scene.c',
  'item.c',
  'SDL_FontCache.c',
  'ui_list.c',
  'ui_helper.c',
  'ui_msgbox.c',
  'ui_quality.c',
  'constances.c',
  'json_helper.c',
  'struct_meta_data.c',
  'types.c',
  'main_menu.c',
  'session.c',
  'level_loader.c',
) + engine_source_files + ecs_source_files + toolbox_source_files + system_source_files + ai_source_files
