subdir('engine')
subdir('ecs')
subdir('toolbox')
subdir('system')
subdir('ai')
subdir('game_event')
source_files = files(
  'dungeon.c', 
  'components.c',
  'resources.c', 
  'entity_factory.c',
  'map.c', 
  'inventory.c',
  'behaviour_tree.c', 
  'path_finder.c',
  'entity_utils.c',
  'read_all.c',
  'game_scene.c',
  'item.c',
  'SDL_FontCache.c',
  'ui_list.c',
  'ui_helper.c',
  'ui_msgbox.c',
  'ui_quality.c',
  'constances.c',
  'json_helper.c',
  'struct_meta_data.c',
  'global.c',
  'main_menu.c',
  'session.c',
  'level_loader.c',
  'ui_dialogue.c',
  'ui_subtile.c',
  'ui_msgbox_w_icon.c',
  'spells.c',
  'animations.c',
  'select_character.c'
) + engine_source_files \
  + ecs_source_files \
  + toolbox_source_files \
  + system_source_files \
  + ai_source_files \
  + game_event_source_files

