subdir('engine')
subdir('ecs')
subdir('toolbox')
subdir('system')
subdir('behavior_node')
subdir('game_event')
source_files = files(
  'SDL_FontCache.c',
  'animations.c',
  'behaviour_tree.c', 
  'components.c',
  'constances.c',
  'dungeon.c', 
  'entity_factory.c',
  'entity_utils.c',
  'game_scene.c',
  'global.c',
  'inventory.c',
  'item.c',
  'json_helper.c',
  'level_loader.c',
  'main_menu.c',
  'map.c', 
  'path_finder.c',
  'read_all.c',
  'resources.c', 
  'select_character.c',
  'session.c',
  'spells.c',
  'struct_meta_data.c',
  'ui_dialogue.c',
  'ui_helper.c',
  'ui_list.c',
  'ui_msgbox.c',
  'ui_msgbox_w_icon.c',
  'ui_quality.c',
  'ui_subtile.c',
) + engine_source_files \
  + ecs_source_files \
  + toolbox_source_files \
  + system_source_files \
  + behaviour_node_source_files \
  + game_event_source_files

