
task_sources = files(
	'task/follow_attack_target.c',
    'task/attack.c',
    'task/equip.c',
    'task/move_to.c',
    'task/set_dest_to_spot.c',
    'task/wait.c',
)

condition_sources = files(
  'condition/has_attack_target.c',
  'condition/is_attacked.c',
)

behaviour_node_source_files = task_sources + condition_sources

