system_source_files = files(
  './event_messaging_sys.c',

  './motion_sys.c',
  './rendering_sys.c',
  './ai_system.c',
  './collision_sys.c',
  './tile_collision_sys.c',
  './collision_mgr_sys.c',
  './animator_sys.c',
  './animator_ctl_sys.c',
  './camera_sys.c',
  './health_sys.c',
  './healthbar_rendering_sys.c',
  './late_destroying_sys.c',
  './dmg_sys.c',
  './life_span_sys.c',
  './pickup_sys.c',
  './drop_system.c',
  './player_ctl_sys.c',
  './equipment_sys.c',
  './hud_system.c',
  './text_rendering_sys.c',
  './interaction_system.c',
  './dialogue_sys.c',
  './merchant_sys.c',
  './following_system.c',
  './door_system.c',
  './block_input_system.c',
  './chest_system.c',
  './casting_sys.c',
  #weapon skill systems
  './weapon_skill/swing.c',
  './weapon_skill/charge.c',
  './weapon_skill/thunder_storm.c',
  './weapon_skill/thust.c',

  #debug systems
  './debug/draw_path.c',
  './debug/draw_hitbox.c',
  './debug/draw_target.c',
  './debug/draw_position.c',

  #game events
  './game_event/game_event.c',
  './game_event/begining.c',
)
