system_source_files = files(
  'ai.c',
  'animator.c',
  'camera.c',
  'casting.c',
  'character_animator.c',
  'chest.c',
  'collision.c',
  'collision_manager.c',
  'damage.c',
  'dialogue.c',
  'door.c',
  'drop.c',
  'effect.c',
  'equipment.c',
  'event_messaging.c',
  'following.c',
  'health.c',
  'healthbar_rendering.c',
  'hud.c',
  'interaction.c',
  'late_destroying.c',
  'life_span.c',
  'merchant.c',
  'motion.c',
  'pickup.c',
  'player_controller.c',
  'self_destruction.c',
  'sprite_rendering.c',
  'stagger.c',
  'text_rendering.c',
  'tile_collision.c',
  'update_attack_target.c',
  'update_facing_direction.c',

  #weapon skill systems
  'weapon_skill/charge.c',
  'weapon_skill/shoot.c',
  'weapon_skill/swing.c',
  'weapon_skill/thunder_storm.c',
  'weapon_skill/thust.c',

  #debug systems
  'debug/draw_path.c',
  'debug/draw_hitbox.c',
  'debug/draw_target.c',
  'debug/draw_position.c',
)
